# LicenseValidator

./: CMakeLists.txt  README.md  license.key  license.txt  license.txt.sha1.sign  license.txt.sha256  license.txt.sha256.sign  private-key-rsa.pem  private-rsa.pem  public-key-rsa.pem  public-rsa.pem
src/: License.cpp  License.h  Utils.cpp  Utils.h  main.cpp
